src/main/java/GrammarParser.java
// Generated from C:/itmo/parser-generator/src/main\Grammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAMMAR=1, HEADER=2, MEMBERS=3, INIT=4, RETURNS=5, LOCALS=6, SKIPPING=7, 
		OPEN_BRACKET=8, CLOSE_BRACKET=9, SQUARE_OPEN_BRACKET=10, SQUARE_CLOSE_BRACKET=11, 
		COLON=12, COMMA=13, SEMICOLON=14, OR=15, WORD=16, REGEX=17, CODE_TEXT=18, 
		PARAMETER_TEXT=19, WS=20;
	public static final int
		RULE_s = 0, RULE_file = 1, RULE_documentComment = 2, RULE_header = 3, 
		RULE_members = 4, RULE_state_declaration = 5, RULE_state_parameters = 6, 
		RULE_state_returns = 7, RULE_state_locals = 8, RULE_state_rule = 9, RULE_item = 10, 
		RULE_code_block = 11, RULE_parameter_block = 12, RULE_token_declaration = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "file", "documentComment", "header", "members", "state_declaration", 
			"state_parameters", "state_returns", "state_locals", "state_rule", "item", 
			"code_block", "parameter_block", "token_declaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "'@header'", "'@members'", "'@init'", "'returns'", 
			"'locals'", "'-> skip'", "'('", "')'", "'['", "']'", "':'", "','", "';'", 
			"'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GRAMMAR", "HEADER", "MEMBERS", "INIT", "RETURNS", "LOCALS", "SKIPPING", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "SQUARE_OPEN_BRACKET", "SQUARE_CLOSE_BRACKET", 
			"COLON", "COMMA", "SEMICOLON", "OR", "WORD", "REGEX", "CODE_TEXT", "PARAMETER_TEXT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public Grammar g;
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);

		    ((SContext)_localctx).g =  new Grammar();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			file(_localctx.g);
			setState(29);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public Grammar g;
		public State_declarationContext state_declaration;
		public Token_declarationContext token_declaration;
		public DocumentCommentContext documentComment() {
			return getRuleContext(DocumentCommentContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public MembersContext members() {
			return getRuleContext(MembersContext.class,0);
		}
		public List<State_declarationContext> state_declaration() {
			return getRuleContexts(State_declarationContext.class);
		}
		public State_declarationContext state_declaration(int i) {
			return getRuleContext(State_declarationContext.class,i);
		}
		public List<Token_declarationContext> token_declaration() {
			return getRuleContexts(Token_declarationContext.class);
		}
		public Token_declarationContext token_declaration(int i) {
			return getRuleContext(Token_declarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FileContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file(Grammar g) throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState(), g);
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GRAMMAR) {
				{
				setState(31);
				documentComment(_localctx.g);
				}
			}

			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HEADER) {
				{
				setState(34);
				header(_localctx.g);
				}
			}

			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MEMBERS) {
				{
				setState(37);
				members(_localctx.g);
				}
			}

			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(40);
					((FileContext)_localctx).state_declaration = state_declaration();

					            _localctx.g.addState(((FileContext)_localctx).state_declaration.state);
					        
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(48);
				((FileContext)_localctx).token_declaration = token_declaration();

				            _localctx.g.addToken(((FileContext)_localctx).token_declaration.token);
				        
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentCommentContext extends ParserRuleContext {
		public Grammar g;
		public Token WORD;
		public TerminalNode GRAMMAR() { return getToken(GrammarParser.GRAMMAR, 0); }
		public TerminalNode WORD() { return getToken(GrammarParser.WORD, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public DocumentCommentContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DocumentCommentContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_documentComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDocumentComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDocumentComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDocumentComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentCommentContext documentComment(Grammar g) throws RecognitionException {
		DocumentCommentContext _localctx = new DocumentCommentContext(_ctx, getState(), g);
		enterRule(_localctx, 4, RULE_documentComment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(GRAMMAR);
			setState(57);
			((DocumentCommentContext)_localctx).WORD = match(WORD);
			setState(58);
			match(SEMICOLON);

			        _localctx.g.setName((((DocumentCommentContext)_localctx).WORD!=null?((DocumentCommentContext)_localctx).WORD.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Grammar g;
		public StringBuilder code;
		public TerminalNode HEADER() { return getToken(GrammarParser.HEADER, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public HeaderContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header(Grammar g) throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState(), g);
		enterRule(_localctx, 6, RULE_header);

		    ((HeaderContext)_localctx).code =  new StringBuilder();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(HEADER);
			setState(62);
			code_block(_localctx.code);

			        _localctx.g.setHeader(_localctx.code.toString());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembersContext extends ParserRuleContext {
		public Grammar g;
		public StringBuilder code;
		public TerminalNode MEMBERS() { return getToken(GrammarParser.MEMBERS, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public MembersContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MembersContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_members; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterMembers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitMembers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitMembers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MembersContext members(Grammar g) throws RecognitionException {
		MembersContext _localctx = new MembersContext(_ctx, getState(), g);
		enterRule(_localctx, 8, RULE_members);

		    ((MembersContext)_localctx).code =  new StringBuilder();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(MEMBERS);
			setState(66);
			code_block(_localctx.code);

			        _localctx.g.setMembers(_localctx.code.toString());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_declarationContext extends ParserRuleContext {
		public State state;
		public StringBuilder code;
		public Token WORD;
		public State_ruleContext state_rule;
		public TerminalNode WORD() { return getToken(GrammarParser.WORD, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public List<State_ruleContext> state_rule() {
			return getRuleContexts(State_ruleContext.class);
		}
		public State_ruleContext state_rule(int i) {
			return getRuleContext(State_ruleContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public List<TerminalNode> SQUARE_OPEN_BRACKET() { return getTokens(GrammarParser.SQUARE_OPEN_BRACKET); }
		public TerminalNode SQUARE_OPEN_BRACKET(int i) {
			return getToken(GrammarParser.SQUARE_OPEN_BRACKET, i);
		}
		public State_parametersContext state_parameters() {
			return getRuleContext(State_parametersContext.class,0);
		}
		public List<TerminalNode> SQUARE_CLOSE_BRACKET() { return getTokens(GrammarParser.SQUARE_CLOSE_BRACKET); }
		public TerminalNode SQUARE_CLOSE_BRACKET(int i) {
			return getToken(GrammarParser.SQUARE_CLOSE_BRACKET, i);
		}
		public TerminalNode RETURNS() { return getToken(GrammarParser.RETURNS, 0); }
		public State_returnsContext state_returns() {
			return getRuleContext(State_returnsContext.class,0);
		}
		public TerminalNode LOCALS() { return getToken(GrammarParser.LOCALS, 0); }
		public State_localsContext state_locals() {
			return getRuleContext(State_localsContext.class,0);
		}
		public TerminalNode INIT() { return getToken(GrammarParser.INIT, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public List<TerminalNode> OR() { return getTokens(GrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(GrammarParser.OR, i);
		}
		public State_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterState_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitState_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitState_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_declarationContext state_declaration() throws RecognitionException {
		State_declarationContext _localctx = new State_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_state_declaration);

		    ((State_declarationContext)_localctx).code =  new StringBuilder();
		    ((State_declarationContext)_localctx).state =  new State();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((State_declarationContext)_localctx).WORD = match(WORD);

			        _localctx.state.setName((((State_declarationContext)_localctx).WORD!=null?((State_declarationContext)_localctx).WORD.getText():null));
			    
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SQUARE_OPEN_BRACKET) {
				{
				setState(71);
				match(SQUARE_OPEN_BRACKET);
				setState(72);
				state_parameters(_localctx.state);
				setState(73);
				match(SQUARE_CLOSE_BRACKET);
				}
			}

			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURNS) {
				{
				setState(77);
				match(RETURNS);
				setState(78);
				match(SQUARE_OPEN_BRACKET);
				setState(79);
				state_returns(_localctx.state);
				setState(80);
				match(SQUARE_CLOSE_BRACKET);
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LOCALS) {
				{
				setState(84);
				match(LOCALS);
				setState(85);
				match(SQUARE_OPEN_BRACKET);
				setState(86);
				state_locals(_localctx.state);
				setState(87);
				match(SQUARE_CLOSE_BRACKET);
				}
			}

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INIT) {
				{
				setState(91);
				match(INIT);
				setState(92);
				code_block(_localctx.code);

				            _localctx.state.setInit(_localctx.code.toString());
				        
				}
			}

			setState(97);
			match(COLON);
			setState(98);
			((State_declarationContext)_localctx).state_rule = state_rule();

			        _localctx.state.addRule(((State_declarationContext)_localctx).state_rule.rule);
			    
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(100);
				match(OR);
				setState(101);
				((State_declarationContext)_localctx).state_rule = state_rule();

				            _localctx.state.addRule(((State_declarationContext)_localctx).state_rule.rule);
				        
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_parametersContext extends ParserRuleContext {
		public State state;
		public Token type;
		public Token name;
		public List<TerminalNode> WORD() { return getTokens(GrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(GrammarParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public State_parametersContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public State_parametersContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_state_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterState_parameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitState_parameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitState_parameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_parametersContext state_parameters(State state) throws RecognitionException {
		State_parametersContext _localctx = new State_parametersContext(_ctx, getState(), state);
		enterRule(_localctx, 12, RULE_state_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((State_parametersContext)_localctx).type = match(WORD);
			setState(112);
			((State_parametersContext)_localctx).name = match(WORD);

			        _localctx.state.addParameter((((State_parametersContext)_localctx).type!=null?((State_parametersContext)_localctx).type.getText():null), (((State_parametersContext)_localctx).name!=null?((State_parametersContext)_localctx).name.getText():null));
			    
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(114);
				match(COMMA);
				setState(115);
				((State_parametersContext)_localctx).type = match(WORD);
				setState(116);
				((State_parametersContext)_localctx).name = match(WORD);

				            _localctx.state.addParameter((((State_parametersContext)_localctx).type!=null?((State_parametersContext)_localctx).type.getText():null), (((State_parametersContext)_localctx).name!=null?((State_parametersContext)_localctx).name.getText():null));
				        
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_returnsContext extends ParserRuleContext {
		public State state;
		public Token type;
		public Token name;
		public List<TerminalNode> WORD() { return getTokens(GrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(GrammarParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public State_returnsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public State_returnsContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_state_returns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterState_returns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitState_returns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitState_returns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_returnsContext state_returns(State state) throws RecognitionException {
		State_returnsContext _localctx = new State_returnsContext(_ctx, getState(), state);
		enterRule(_localctx, 14, RULE_state_returns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((State_returnsContext)_localctx).type = match(WORD);
			setState(124);
			((State_returnsContext)_localctx).name = match(WORD);

			        _localctx.state.addReturn((((State_returnsContext)_localctx).type!=null?((State_returnsContext)_localctx).type.getText():null), (((State_returnsContext)_localctx).name!=null?((State_returnsContext)_localctx).name.getText():null));
			    
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(126);
				match(COMMA);
				setState(127);
				((State_returnsContext)_localctx).type = match(WORD);
				setState(128);
				((State_returnsContext)_localctx).name = match(WORD);

				            _localctx.state.addReturn((((State_returnsContext)_localctx).type!=null?((State_returnsContext)_localctx).type.getText():null), (((State_returnsContext)_localctx).name!=null?((State_returnsContext)_localctx).name.getText():null));
				        
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_localsContext extends ParserRuleContext {
		public State state;
		public Token type;
		public Token name;
		public List<TerminalNode> WORD() { return getTokens(GrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(GrammarParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public State_localsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public State_localsContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_state_locals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterState_locals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitState_locals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitState_locals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_localsContext state_locals(State state) throws RecognitionException {
		State_localsContext _localctx = new State_localsContext(_ctx, getState(), state);
		enterRule(_localctx, 16, RULE_state_locals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			((State_localsContext)_localctx).type = match(WORD);
			setState(136);
			((State_localsContext)_localctx).name = match(WORD);

			        _localctx.state.addLocal((((State_localsContext)_localctx).type!=null?((State_localsContext)_localctx).type.getText():null), (((State_localsContext)_localctx).name!=null?((State_localsContext)_localctx).name.getText():null));
			    
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(138);
				match(COMMA);
				setState(139);
				((State_localsContext)_localctx).type = match(WORD);
				setState(140);
				((State_localsContext)_localctx).name = match(WORD);

				            _localctx.state.addLocal((((State_localsContext)_localctx).type!=null?((State_localsContext)_localctx).type.getText():null), (((State_localsContext)_localctx).name!=null?((State_localsContext)_localctx).name.getText():null));
				        
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
